--- a/media/templates/site/cassiopeia_asiawind/css/_swiper.scss
+++ b/media/templates/site/cassiopeia_asiawind/css/_swiper.scss
@@ -7,23 +7,23 @@ $goldColor: #d0ad6a;
    max-width: 1900px !important;
 
    padding: 0 140px !important;
-   margin-top: 100px;
+   margin-top: 40px;
 
    @media (max-width: 767.98px) {
       padding: 0 15px !important;
-      margin-top: 50px;
+      margin-top: 20px;
 
-      height: 590px;
+      height: 500px;
 
       .swiper-button-next,
       .swiper-button-prev {
-         top: 430px;
+         top: 390px;
       }
    }
 
    @media (max-width: 575.98px) {
       padding: 0 15px !important;
-      margin-top: 50px;
+      margin-top: 0;
 
       height: 590px;
 
@@ -57,26 +57,57 @@ $goldColor: #d0ad6a;
          z-index: 1;
       }
    }
-   //    @media (max-width: 575.98px) {
-   //       .order-btn {
-   //          position: absolute;
-   //          top: 540px;
-   //          left: 50%;
-   //          transform: translate(-50%, -50%);
-   //          z-index: 1;
 
-   //          width: 70%;
-   //          max-width: 200px;
-
-   //          a {
-   //             width: 100%;
-   //          }
-   //       }
-   //    }
    .order-btn {
       text-align: center;
       .btn-sm {
-         font-size: 1.5rem;
+         font-size: 1rem;
+         font-weight: bold;
+         border-width: 2px !important;
+
+         @media (max-width: 767.98px) {
+            font-size: 1rem;
+         }
+      }
+   }
+
+   @media (min-width: 768px) and (max-width: 991.98px) {
+      margin-top: 0px;
+      .swiper-container {
+         height: 540px;
+      }
+
+      .order-btn {
+         top: 89%;
+
+         a {
+            font-size: 0.9rem !important;
+         }
+      }
+   }
+
+   @media (min-width: 992px) {
+      .order-btn {
+         position: absolute;
+         top: 95%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         z-index: 1;
+      }
+   }
+
+   .order-btn {
+      text-align: center;
+
+      top: 89%;
+      @media (min-width: 992px) {
+         top: 96%;
+      }
+      a {
+         font-size: 0.9rem !important;
+      }
+      .btn-sm {
+         font-size: 1rem;
          font-weight: bold;
          border-width: 5px;
 
@@ -86,17 +117,11 @@ $goldColor: #d0ad6a;
       }
    }
 
-   @media (min-width: 768px) and (max-width: 991.98px) {
-      margin-top: 30px;
-      .swiper-container {
-         height: 540px;
-      }
-
+   @media (min-width: 576px) and (max-width: 767.98px) {
       .order-btn {
-         top: 89%;
-         a {
-            font-size: 0.9rem !important;
-         }
+         text-align: center;
+
+         top: 79.4%;
       }
    }
 }
@@ -119,7 +144,7 @@ $goldColor: #d0ad6a;
    width: 100%;
    height: 100%;
 
-   height: 650px;
+   height: 610px;
    overflow: hidden;
    @media (max-width: 575.98px) {
       height: 500px;
@@ -129,7 +154,11 @@ $goldColor: #d0ad6a;
       height: 450px;
    }
 }
-
+@media (max-width: 991.98px) {
+   .swiper-slide {
+      transform: scale(0.8) !important;
+   }
+}
 .swiper-slide {
    text-align: center;
    font-size: 18px;
@@ -155,4 +184,24 @@ $goldColor: #d0ad6a;
    width: 100%;
    height: 100%;
    object-fit: cover;
+}
+#scr4 {
+   @media (min-width: 576px) and (max-width: 767.98px) {
+      margin-top: 0;
+      padding-top: 20px !important;
+   }
+
+   @media (min-width: 768px) and (max-width: 991.98px) {
+      margin-top: 0;
+      padding-top: 20px !important;
+   }
+
+   @media (min-width: 992px) {
+      margin-top: 0;
+   }
+
+   @media (max-width: 575.98px) {
+      margin-top: 0;
+      padding-top: 0 !important;
+   }
 }
