--- a/media/templates/site/cassiopeia_asiawind/css/main.css
+++ b/media/templates/site/cassiopeia_asiawind/css/main.css
@@ -248,7 +248,7 @@
           hyphens: auto;
 }
 
-@media (max-width: 1399.98px) {
+@media (max-width: 1999.98px) {
   .intro {
     padding: 50px 0 !important;
   }
@@ -270,12 +270,12 @@
     gap: 15px 80px !important;
   }
 }
-@media (min-width: 576px) and (max-width: 1399.98px) {
+@media (min-width: 576px) and (max-width: 1999.98px) {
   .box .button {
     padding: 10px !important;
   }
 }
-@media (min-width: 768px) and (max-width: 1399.98px) {
+@media (min-width: 768px) and (max-width: 1999.98px) {
   .box {
     width: 670px !important;
     margin: auto !important;
@@ -288,47 +288,7 @@
     max-width: 190px !important;
   }
 }
-@media (min-height: 600px) and (min-width: 992px) and (max-width: 1399.98px) {
-  .intro {
-    padding: 50px 0 !important;
-  }
-  .box {
-    padding: 30px 15px !important;
-  }
-  .box .border-btns-wrapper {
-    gap: 0 !important;
-  }
-  .box .border-btns-wrapper .button {
-    font-size: 15px !important;
-    height: 42px !important;
-  }
-  .box .border-btns-wrapper .border-list li {
-    font-size: 13px !important;
-    line-height: 22px !important;
-  }
-  .box .border-btns-wrapper-item {
-    gap: 15px 80px !important;
-  }
-}
-@media (min-height: 600px) and (min-width: 992px) and (min-width: 576px) and (max-width: 1399.98px) {
-  .box .button {
-    padding: 10px !important;
-  }
-}
-@media (min-height: 600px) and (min-width: 992px) and (min-width: 768px) and (max-width: 1399.98px) {
-  .box {
-    width: 670px !important;
-    margin: auto !important;
-  }
-  .box .border-btns-wrapper-item {
-    -ms-flex-wrap: nowrap !important;
-        flex-wrap: nowrap !important;
-  }
-  .box .border-btns-wrapper-item .button {
-    max-width: 190px !important;
-  }
-}
-@media (min-height: 600px) and (min-width: 992px) {
+@media (min-height: 500px) and (min-width: 992px) {
   .intro {
     padding: 120px 0 !important;
   }
@@ -347,7 +307,7 @@
     font-size: 16px !important;
   }
 }
-@media (min-width: 1400px) {
+@media (min-width: 2000px) {
   .intro {
     padding: 80px 0 !important;
   }
@@ -688,23 +648,23 @@
   height: 100%;
   max-width: 1900px !important;
   padding: 0 140px !important;
-  margin-top: 100px;
+  margin-top: 40px;
 }
 @media (max-width: 767.98px) {
   .slider {
     padding: 0 15px !important;
-    margin-top: 50px;
-    height: 590px;
+    margin-top: 20px;
+    height: 500px;
   }
   .slider .swiper-button-next,
   .slider .swiper-button-prev {
-    top: 430px;
+    top: 390px;
   }
 }
 @media (max-width: 575.98px) {
   .slider {
     padding: 0 15px !important;
-    margin-top: 50px;
+    margin-top: 0;
     height: 590px;
   }
   .slider .swiper-button-next,
@@ -740,9 +700,9 @@
   text-align: center;
 }
 .slider .order-btn .btn-sm {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: bold;
-  border-width: 5px;
+  border-width: 2px !important;
 }
 @media (max-width: 767.98px) {
   .slider .order-btn .btn-sm {
@@ -751,7 +711,7 @@
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .slider {
-    margin-top: 30px;
+    margin-top: 0px;
   }
   .slider .swiper-container {
     height: 540px;
@@ -761,6 +721,44 @@
   }
   .slider .order-btn a {
     font-size: 0.9rem !important;
+  }
+}
+@media (min-width: 992px) {
+  .slider .order-btn {
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+}
+.slider .order-btn {
+  text-align: center;
+  top: 89%;
+}
+@media (min-width: 992px) {
+  .slider .order-btn {
+    top: 96%;
+  }
+}
+.slider .order-btn a {
+  font-size: 0.9rem !important;
+}
+.slider .order-btn .btn-sm {
+  font-size: 1rem;
+  font-weight: bold;
+  border-width: 5px;
+}
+@media (max-width: 767.98px) {
+  .slider .order-btn .btn-sm {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .slider .order-btn {
+    text-align: center;
+    top: 79.4%;
   }
 }
 
@@ -782,7 +780,7 @@
 .swiper-container {
   width: 100%;
   height: 100%;
-  height: 650px;
+  height: 610px;
   overflow: hidden;
 }
 @media (max-width: 575.98px) {
@@ -796,6 +794,12 @@
   }
 }
 
+@media (max-width: 991.98px) {
+  .swiper-slide {
+    -webkit-transform: scale(0.8) !important;
+            transform: scale(0.8) !important;
+  }
+}
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -820,10 +824,34 @@
      object-fit: cover;
 }
 
+@media (min-width: 576px) and (max-width: 767.98px) {
+  #scr4 {
+    margin-top: 0;
+    padding-top: 20px !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #scr4 {
+    margin-top: 0;
+    padding-top: 20px !important;
+  }
+}
+@media (min-width: 992px) {
+  #scr4 {
+    margin-top: 0;
+  }
+}
+@media (max-width: 575.98px) {
+  #scr4 {
+    margin-top: 0;
+    padding-top: 0 !important;
+  }
+}
+
 .review-wrapper {
-  padding: 35px 45px;
+  padding: 20px 30px;
+  height: 250px;
   background: #1d1b20;
-  height: 330px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -834,7 +862,7 @@
 .review-wrapper p {
   display: inline-block;
   margin: auto;
-  font-size: 25px;
+  font-size: 20px;
   -webkit-hyphens: auto;
       -ms-hyphens: auto;
           hyphens: auto;
@@ -858,8 +886,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -160%);
-          transform: translate(-50%, -160%);
+  -webkit-transform: translate(-50%, -149%);
+          transform: translate(-50%, -149%);
   border: 7px solid #d0ad6a;
   background: #1d1b20;
   border-radius: 50%;
@@ -883,6 +911,13 @@
 }
 
 @media (max-width: 991.98px) {
+  .review-wrapper-profile {
+    -webkit-transform: translate(-50%, -161%);
+            transform: translate(-50%, -161%);
+  }
+  .review-wrapper-profile h5 {
+    font-size: 15px !important;
+  }
   .review-wrapper {
     height: 230px;
   }
@@ -890,6 +925,28 @@
     font-size: 16px;
   }
   .review-wrapper-profile {
+    max-height: 140px;
+    max-width: 150px;
+  }
+}
+@media (min-width: 992px) {
+  .swiper-container {
+    height: 450px;
+  }
+  .swiper-container .review-wrapper-profile {
+    -webkit-transform: translate(-50%, -159%);
+            transform: translate(-50%, -159%);
+  }
+  .swiper-container .review-wrapper-profile h5 {
+    font-size: 15px;
+  }
+  .swiper-container .review-wrapper {
+    height: 230px;
+  }
+  .swiper-container .review-wrapper p {
+    font-size: 16px;
+  }
+  .swiper-container .review-wrapper-profile {
     max-height: 140px;
     max-width: 150px;
   }
