--- a/media/templates/site/cassiopeia_asiawind/css/main.css
+++ b/media/templates/site/cassiopeia_asiawind/css/main.css
@@ -279,7 +279,6 @@
 @media (min-width: 768px) and (max-width: 1999.98px) {
   .box {
     width: 100%;
-    max-width: 850px !important;
     margin: auto !important;
   }
   .box .border-btns-wrapper-item {
@@ -309,13 +308,23 @@
     font-size: 16px !important;
   }
 }
-@media (min-width: 2000px) and (min-height: 950px) {
+@media (min-width: 992px) and (max-width: 1299.98px) {
+  .intro-info-container {
+    max-width: 1420px !important;
+  }
+  .intro-info-container .box {
+    max-width: none !important;
+  }
+}
+@media (min-width: 1300px) {
+  .intro-info-container {
+    max-width: 1420px !important;
+  }
   .intro {
     padding: 80px 0 !important;
   }
   .box {
     padding: 30px 15px !important;
-    max-width: 1100px !important;
     margin: auto !important;
   }
   .box .border-btns-wrapper {
@@ -652,6 +661,11 @@
   max-width: 1420px !important;
   padding: 0 140px !important;
   margin-top: 40px;
+}
+@media (max-width: 991.98px) {
+  .slider {
+    max-width: 720px !important;
+  }
 }
 @media (max-width: 767.98px) {
   .slider {
